<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <!-- 上半部分的节目海报及详情展示 -->
            <ImageView
                android:id="@+id/video_detail_logo_play"
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/video_detail_pgmName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:textColor="@color/menu_select" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/infoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:textSize="15dp"
                        android:text="简介"
                        android:gravity="center"
                        android:textColor="@color/sciflykublue"/>

                    <TextView
                        android:id="@+id/info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/menu_select"
                        android:textSize="12dp"
                        android:layout_margin="5dp"
                        android:paddingBottom="50dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:orientation="vertical"
                    android:background="@color/sciflykublue">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:textSize="12dp" >

                        <TextView
                            android:id="@+id/video_detail_actorName_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_detail_actorName"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/video_detail_actorName"
                        android:hint="@string/video_detail_default"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="8"
                        android:textColor="#ffffff"
                        android:textSize="12dp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/video_detail_dirertorName_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_detail_dirertorName"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/video_detail_dirertorName"
                            android:hint="@string/video_detail_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video_detail_areaNameLinear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_detail_areaName"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/video_detail_areaName"
                            android:hint="@string/video_detail_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video_detail_yearLinear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_detail_year"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/video_detail_year"
                            android:hint="@string/video_detail_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/video_detail_typeLinear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/video_detail_typeName"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/video_detail_typeName"
                            android:hint="@string/video_detail_default"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:textSize="12dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>