<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pgmdetail.PgmDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#847465"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent=".35"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/video_detail_logo_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        app:layout_constraintDimensionRatio="3:3.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.45" />

    <ImageView
        android:id="@+id/video_play"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/play_image"
        app:layout_constraintBottom_toBottomOf="@+id/video_detail_logo_play"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintStart_toStartOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toTopOf="@+id/video_detail_logo_play"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15" />

    <TextView
        android:id="@+id/video_detail_pgmName"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/menu_select"
        android:textSize="16dp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toTopOf="@+id/video_detail_logo_play" />


    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toBottomOf="@+id/video_detail_pgmName">

        <TextView
            android:id="@+id/video_detail_actorName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_detail_actorName"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/video_detail_actorName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/video_detail_default"
            android:maxLines="3"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toBottomOf="@+id/ll1">

        <TextView
            android:id="@+id/video_detail_dirertorName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_detail_dirertorName"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/video_detail_dirertorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/video_detail_default"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_detail_typeLinear"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toBottomOf="@+id/ll2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_detail_typeName"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/video_detail_typeName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/video_detail_default"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_publish_time"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toBottomOf="@+id/video_detail_typeLinear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_detail_year"
            android:textColor="#ffffff"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_publish_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/video_detail_default"
            android:textColor="#ffffff"
            android:textSize="14dp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintStart_toEndOf="@+id/video_detail_logo_play"
        app:layout_constraintTop_toBottomOf="@+id/video_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/infoTitle"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:background="#847465"
                android:gravity="center"
                android:text="简介"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="9dp"
                android:lineSpacingExtra="5dp"
                android:textColor="@color/menu_select"
                android:textSize="13dp"
                android:paddingBottom="15dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_retry"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:onClick="onRetry"
        android:src="@drawable/back_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/video_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/video_detail_logo_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="2.1">

        <com.zp.mobile91q.videoplayer.VideoPlayerView
            android:id="@+id/video_details_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/video_details_bottom_rl"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true">
            <ImageButton
                android:id="@+id/video_details_fullscreen"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:background="@drawable/btn_bg_nor"
                android:scaleType="fitXY"
                android:src="@drawable/btn_control_fulls"
                android:layout_alignParentRight="true"
                android:layout_marginRight="8dp"/>
            <TextView
                android:id="@+id/tvSerial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_centerVertical="true"
                android:textSize="14dp"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </RelativeLayout>

        <LinearLayout
            android:id="@+id/seriesBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_above="@+id/searchBtn"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/juji_btn_bg"
            android:gravity="center"
            android:onClick="jujiClk"
            app:layout_constraintTop_toBottomOf="@+id/video_detail_typeLinear"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/filter"
                android:clickable="false" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>